Add device and user groups in the settings
